# thai-travel-v1

./: .gitignore  README.md  database.db  pyproject.toml
app/: database.py  main.py
app/auth/: authentication.py
app/data/: user.py
app/models/: booking.py  province.py  user.py  userTest.py
app/rounter/: __init__.py
app/rounter/v1/: __init__.py  authentication_rounter.py  booking_rounter.py  province_rounter.py  user_rounter.py
app/schemas/: booking_schema.py  province_schema.py  user_schema.py
