[project]
name = "thai-travel"
version = "0.1.0"
description = ""
authors = [
    {name = "Charif",email = "hifrook.zen5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "fastapi-cli (>=0.0.8,<0.0.9)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
